#card1 .card .text || scrollbar issue fixed
Maech 09, 2024

--- a/cards/css/card1.css
+++ b/cards/css/card1.css
@@ -49,7 +49,7 @@
    height:205px;
    display:grid;
    place-items: center;
-   overflow:scroll;
+   overflow:hidden;
    
  }
   #card1 .card .text p{
